Fix: Remove white-space: nowrap and add min-width
I removed the white-space: nowrap declaration for the #artist-bio
selector in styles-pages.css. This allowed the text to break on to a new
line in just the right place, fixing an issue I had with the image
element breaking out of its parent container.

--- a/pages/styles-pages.css
+++ b/pages/styles-pages.css
@@ -71,7 +71,7 @@ h1 {
 }
 
 #artist-bio {
-    white-space: nowrap;
+    min-width: 28ch;
 }
 
 #artist-about {
